--- a/src/App.css
+++ b/src/App.css
@@ -33,15 +33,26 @@ aside {
 }
 .profile--img {
 
-  border-radius: 50px;
+  border-radius: 100%;
   width: 7rem;
   height: 7rem;
   margin-bottom: 2rem;
+  outline: 3px solid #51735b70;
+   border: 3px solid #51735b28;
 }
 .description {
   margin: 0.5rem 0;
   font-size: 0.9rem;
   margin-bottom: 2rem;
+  /* border: 1px solid red; */
+  font-weight: 700;
+  margin-top: 0.9rem;
+  font-family:Georgia, "Times New Roman", Times, serif;
+  color: #51735bce;
+}
+.profile-tags {
+  margin-bottom: 0.5rem;
+  font-weight: 400;
 }
 button {
   margin-bottom: 0.6rem;
@@ -49,6 +60,10 @@ button {
   width: 7rem;
   border-radius: 15rem;
   outline: none;
+  font-size: 0.9rem;
+  font-weight: 600;
+  border: 3px solid #51735b28;
+  color: #51735bce;
 }
 
 .post--wrapper {
@@ -95,9 +110,11 @@ button {
   margin-top: 2.3rem;
 }
 .small-profile {
-  border-radius: 800px;
+  border-radius: 100%;
   width: 4rem;
   height: 4rem;
+  outline: 3px solid #51735b70;
+  border: 3px solid #51735b28;
 }
 input {
   outline: none;
