--- a/src/App.css
+++ b/src/App.css
@@ -157,6 +157,7 @@ input {
   font-size: 0.9rem;
   margin-top: 0.5rem;
   font-style: italic;
+  color: #51735bce;
 }
 .tag {
   font-size: 0.8rem;
