--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,10 @@ aside {
   margin-bottom: 0.5rem;
   font-weight: 400;
 }
+form {
+  display: flex;
+  flex-direction: column;
+}
 button {
   margin-bottom: 0.6rem;
   padding: 0.8rem 0;
@@ -153,6 +157,8 @@ input {
   font-weight: 900;
   letter-spacing: 0.4rem;
 }
+
+
 .date {
   font-size: 0.9rem;
   margin-top: 0.5rem;
